# games_engineering

./: CMakeLists.txt
2_invaders/: game.h  main.cpp  ship.cpp  ship.h
5_physics/: main.cpp
practical_1/: main.cpp
